; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_i2s.c_I2SIntStatus.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_i2s.c_I2SIntStatus.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@APPS_CONFIG_BASE = common dso_local global i64 0, align 8
@APPS_CONFIG_O_DMA_DONE_INT_STS_RAW = common dso_local global i64 0, align 8
@MCASP_O_TXSTAT = common dso_local global i64 0, align 8
@MCASP_O_RXSTAT = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @I2SIntStatus(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* @APPS_CONFIG_BASE, align 8
  %5 = load i64, i64* @APPS_CONFIG_O_DMA_DONE_INT_STS_RAW, align 8
  %6 = add nsw i64 %4, %5
  %7 = call i32 @HWREG(i64 %6)
  %8 = shl i32 %7, 20
  %9 = sext i32 %8 to i64
  store i64 %9, i64* %3, align 8
  %10 = load i64, i64* %3, align 8
  %11 = and i64 %10, 3221225472
  store i64 %11, i64* %3, align 8
  %12 = load i64, i64* %2, align 8
  %13 = load i64, i64* @MCASP_O_TXSTAT, align 8
  %14 = add i64 %12, %13
  %15 = call i32 @HWREG(i64 %14)
  %16 = sext i32 %15 to i64
  %17 = load i64, i64* %3, align 8
  %18 = or i64 %17, %16
  store i64 %18, i64* %3, align 8
  %19 = load i64, i64* %2, align 8
  %20 = load i64, i64* @MCASP_O_RXSTAT, align 8
  %21 = add i64 %19, %20
  %22 = call i32 @HWREG(i64 %21)
  %23 = shl i32 %22, 16
  %24 = sext i32 %23 to i64
  %25 = load i64, i64* %3, align 8
  %26 = or i64 %25, %24
  store i64 %26, i64* %3, align 8
  %27 = load i64, i64* %3, align 8
  ret i64 %27
}

declare dso_local i32 @HWREG(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
